logout api implemented, search no result view added

--- a/src/common/header/header.css
+++ b/src/common/header/header.css
@@ -55,13 +55,13 @@
 }
 .account-icon{
     color: white;
+    margin-right: 5px;
 }
 .profile{
     display: flex;
     align-items: center;
     cursor: pointer;
     color: white;
-    white-space: break-spaces;
 
 
 
