--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -2,17 +2,17 @@
 .card-layout {
     width: 22%;
     margin: 10px;
-    height: fit-content;
+    height: 100%;
 }
 
 .grid-layout {
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 .image-content{
     width: 100%;
-    height: 100%;
+    height:180px;
 }
 .restaraunt-title{
     font-size: large;
