--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -1,20 +1,22 @@
 
 .card-layout {
-    width: 22%;
-    margin: 10px;
+    width: 90%;
     height: 100%;
+    cursor: pointer;
+    margin: 10px;
+
 }
 
 .grid-layout {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 30px;
+    padding: 40px;
 }
-.image-content{
+
+.image-content {
     width: 100%;
-    height:180px;
+    height: 180px;
 }
-.restaraunt-title{
+
+.restaraunt-title {
     font-size: large;
     margin-top: 20px;
     margin-left: 15px;
@@ -24,11 +26,13 @@
 
 
 }
-.categories{
+
+.categories {
     margin-left: 15px;
 
 }
-.bottomcard-layout{
+
+.bottomcard-layout {
     padding: 5px;
     margin-left: 10px;
     margin-right: 10px;
@@ -39,7 +43,8 @@
     justify-content: space-between;
 
 }
-.rating-layout{
+
+.rating-layout {
     background: #EACC5C;
     padding-left: 10px;
     padding-top: 5px;
@@ -49,22 +54,24 @@
     font-size: 12px;
 
 }
-.price{
+
+.price {
     float: right;
     font-size: 12px;
     font-weight: 600;
 }
-.no-result-visible{
-margin: 30px;
+
+.no-result-visible {
+    margin: 30px;
     font-size: medium;
-    display:block;
+    display: block;
 
 }
 
-.no-result-gone{
+.no-result-gone {
     margin: 30px;
 
     font-size: medium;
-    display:none;
+    display: none;
 
 }
