--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -8,7 +8,7 @@
 }
 
 .grid-layout {
-    padding: 40px;
+    margin: 10px;
 }
 
 .image-content {
@@ -28,19 +28,25 @@
 }
 
 .categories {
-    margin-left: 15px;
+    margin-right: 40px;
+
 
 }
 
 .bottomcard-layout {
     padding: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 50px;
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    padding-bottom: 30px;
+    width: auto;
+    padding-left: 40px;
 
 }
 
@@ -75,3 +81,4 @@
     display: none;
 
 }
+
